--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -932,7 +932,7 @@ fluid.polybenzimadozoleprepolymerfoam=Polybenzimadozole Pre Polymer Foam
 fluid.polybenzimadozolesolution=Polybenzimadozole Solution
 fluid.impurepolybenzimadozolesolution=Impure Polybenzimadozole Solution
 fluid.polybenzimadozolewaste=Polybenzimadozole Waste
-
+multiblocktweaker.machine.vacuum_furnace.name=Vacuum Furnace
 
 
 
