--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -76,6 +76,16 @@ material.whitematter=White Matter
 material.redmatter=Red Matter
 material.transcendantmatter=Transcendant Matter
 material.darkmatter=Dark Matter
+material.potassiumethylxantate=Potassium Ethyl Xantate
+material.modularium=Modularium
+
+
+
+
+
+
+
+
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
