--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1227,7 +1227,7 @@ devtech.machine.vacuum_ejection_chamber.mv.name=Advanced Vacuum Ejection Chamber
 fluid.moltennichromerichblend=Molten Nichrome Rich Blend
 recipemap.fermentation_vat.name=Fermentation Vat
 multiblocktweaker.machine.mega_alloy_blast_smelter.name=Mega Alloy Blast Smelter
-
+recipemap.vacuum_ejection_chamber.name=Vacuum Ejection
 
 
 
