--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1262,3 +1262,34 @@ fluid.phosphorus_pentoxide=Phosphorus Pentoxide
 fluid.purified_bedrock_slurry=Purified Bedrock Slurry
 fluid.adamantium_pentoxide=Adamantium Pentoxide
 tile.contenttweaker.zirconium_carbide.name=Zirconium Carbide Casing (Test)
+metaitem.enhancedenderiumrefinedmetalresidues.name=Enhanced Enderium Refined Metal Residues
+recipemap.catalytic_reformation_unit.name=Catalytic Reformation
+multiblocktweaker.machine.cvd_unit.name=CVD Unit
+recipemap.cvd_unit.name=CVD Process
+multiblocktweaker.machine.catalytic_reformation_unit.name=Catalytic Reformation Unit
+item.contenttweaker.nickel_breeding_bed.name=Nickel Breeding Bedrock
+devtech.machine.fluid_compressor.lv.name=Basic Fluid Compressor
+devtech.machine.fluid_compressor.mv.name=Advanced Fluid Compressor
+devtech.machine.fluid_compressor.hv.name=Advanced Fluid Compressor II
+metaitem.pxylene.name=P-Xylene Dust
+metaitem.amococatalsyt.name=Amoco Catalyst Dust
+metaitem.isophthalic_acid.name=Isophthalic Acid Dust
+metaitem.terephthalic_acid.name=Terephthalic Acid Dust
+metaitem.raw_atomic_seperation_catalyst.name=Raw Atomic Seperation Catalyst
+metaitem.soularium_metallic_powder.name=Soularium Metallic Powder
+metaitem.refined_soularium_powder.name=Refined Soularium Powder
+metaitem.bronze_blend.name=Bronze Blend
+metaitem.hmx.name=HMX Implosion Booster
+metaitem.sodium_isobutyl_xanthate.name=Sodium Isobutyl Xanthate
+metaitem.zsmfive.name=ZSM-5 Catalsyt Dust
+fluid.furfural=Furfural
+fluid.tetrabromethane=Tetrabromethane
+fluid.diluted_acetic_acid=Diluted Acetic Acid
+fluid.tetra_propyl_ammonium_bromide=Tetrapropylammoniumbromide
+fluid.mxylene=M-Xylene
+fluid.pxylene=P-Xylene
+fluid.oxylene=O-Xylene
+fluid.eternity=Eternity
+fluid.btex=B.T.E.X
+fluid.mpxylene=M/P Xylene
+fluid.isobutyl_alcohol=Isobutyl Alcohol
