--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1281,7 +1281,7 @@ metaitem.refined_soularium_powder.name=Refined Soularium Powder
 metaitem.bronze_blend.name=Bronze Blend
 metaitem.hmx.name=HMX Implosion Booster
 metaitem.sodium_isobutyl_xanthate.name=Sodium Isobutyl Xanthate
-metaitem.zsmfive.name=ZSM-5 Catalsyt Dust
+metaitem.zsmfive.name=ZSM-5 Catalyst Dust
 fluid.furfural=Furfural
 fluid.tetrabromethane=Tetrabromethane
 fluid.diluted_acetic_acid=Diluted Acetic Acid
@@ -1297,3 +1297,4 @@ recipemap.inscriber.name=Circuit Inscribing
 devtech.machine.inscriber.mv.name=Advanced Inscriber
 devtech.machine.inscriber.hv.name=Advanced Inscriber II
 devtech.machine.inscriber.ev.name=Advanced Inscriber III
+metaitem.amococatalsyt.name=Amoco Catalyst
