--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1231,7 +1231,7 @@ multiblocktweaker.machine.bedrock_pump.name=Bedrock Pump
 tile.contenttweaker.hss_s.name=HSS-S Casing
 metaitem.wet_bedrock.name=Wet Bedrock Dust
 metaitem.oily_bedrock.name=Oily Bedrock Dust
-metaitem.fine_bedrock_dust.name=Fine bedrock Dust
+metaitem.fine_bedrock_dust.name=Fine Bedrock Dust
 metaitem.adamantite.name=Adamantite Dust
 metaitem.darmstadtium_catalyst.name=Darmstadtium Catalyst Dust
 metaitem.adamantium_pentoxide.name=Adamantium Pentoxide Dust
@@ -1298,3 +1298,5 @@ devtech.machine.inscriber.mv.name=Advanced Inscriber
 devtech.machine.inscriber.hv.name=Advanced Inscriber II
 devtech.machine.inscriber.ev.name=Advanced Inscriber III
 metaitem.amococatalsyt.name=Amoco Catalyst
+fluid.tripropylamine=Tripropylamine
+recipemap.bedrock_pump.name=Bedrock Pumping
