--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -158,7 +158,7 @@ item.contenttweaker.wrappedplutonium.name=Wrapped Plutonium Ingot
 item.contenttweaker.highdensityplutoniumnugget.name=High Density Plutonium Nugget
 item.contenttweaker.highdensityplutonium.name=High Density Plutonium
 fluid.plutoniumbasedliquidfuel=Plutonium Based Liquid Fuel
-fluid.plutoniumbasedliquidfuele=Plutonium Based Liquid Fuel (Exited State)
+fluid.plutoniumbasedliquidfuele=Plutonium Based Liquid Fuel (Excited State)
 tile.contenttweaker.neutronsensor.name= Neutron Sensor
 tile.contenttweaker.neutronaccelerator.name= Neutron Accelerator
 tile.contenttweaker.perciseelectronicunitcasing.name=Precise Electronic Unit Casing
@@ -185,7 +185,7 @@ item.contenttweaker.engravedmanyiullynchip.name= Engraved Manyullyn Chip
 item.contenttweaker.highdensityuranium.name=High Density Uranium
 item.contenttweaker.highdensityuraniumnugget.name=High Density Uranium Nugget
 fluid.uraniumbasedliquidfuel=Uranium Based Fuel
-fluid.uraniumbasedliquidfuele=Uranium Based Fuel (Exited State)
+fluid.uraniumbasedliquidfuele=Uranium Based Fuel (Excited State)
 item.contenttweaker.bioprocesssingunit.name=Bio Processing Unit
 item.contenttweaker.tungsticnaquadah.name=Tungstic Naquadah
 fluid.moltentungsticnaquadah=Molten Tungstic Naquadah
