--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1300,3 +1300,4 @@ devtech.machine.inscriber.ev.name=Advanced Inscriber III
 metaitem.amococatalsyt.name=Amoco Catalyst
 fluid.tripropylamine=Tripropylamine
 recipemap.bedrock_pump.name=Bedrock Pumping
+item.contenttweaker.annealed_nickel_plate.name=Annealed Nickel Plate
