--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1301,3 +1301,9 @@ metaitem.amococatalsyt.name=Amoco Catalyst
 fluid.tripropylamine=Tripropylamine
 recipemap.bedrock_pump.name=Bedrock Pumping
 item.contenttweaker.annealed_nickel_plate.name=Annealed Nickel Plate
+tile.contenttweaker.well_drained_soil.name=Well Drained Soil
+metaitem.cupriavidusnecator.name=Cupriavidus Necator Bacteria Sample
+item.contenttweaker.cupriavidusnecator.name=Cupriavidus Necator Petri Dish
+item.contenttweaker.graphite_cruicible.name=Graphite Cruicible
+item.contenttweaker.unpreperated_cela_boule.name=Unpreperated Ce:/La Boule
+item.contenttweaker.cruicible_mold.name=Cruicible Mold
