--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1148,8 +1148,8 @@ metaitem.lanthanumdopedyttrium.name=Lanthanum Doped Yttrium
 metaitem.lanthanum2dopedyttriumbarium.name=Lanthanum II Doped Yttrium Barium
 metaitem.enrichedgraphitedust.name=Enriched Graphite
 metaitem.irradiated_borax.name=Irradiated Borax
-metaitem.rhodium3.name=Rhodium III
-metaitem.rhodium2a.name=Rhodium II acid
+metaitem.rhodium3.name=Rhodium (III) chloride
+metaitem.rhodium2a.name=Rhodium (II) acetate
 metaitem.bariumsludgedustresidue.name=Barium Sludge Dust Residue
 metaitem.yttriumlanthanumceriummixturedust.name=Yttrium Lanthanum Cerium Mixture Dust
 metaitem.ceriumlanthanumcompound.name=Cerium Lanthanum Compound
@@ -1297,7 +1297,6 @@ recipemap.inscriber.name=Circuit Inscribing
 devtech.machine.inscriber.mv.name=Advanced Inscriber
 devtech.machine.inscriber.hv.name=Advanced Inscriber II
 devtech.machine.inscriber.ev.name=Advanced Inscriber III
-metaitem.amococatalsyt.name=Amoco Catalyst
 fluid.tripropylamine=Tripropylamine
 recipemap.bedrock_pump.name=Bedrock Pumping
 item.contenttweaker.annealed_nickel_plate.name=Annealed Nickel Plate
@@ -1307,3 +1306,29 @@ item.contenttweaker.cupriavidusnecator.name=Cupriavidus Necator Petri Dish
 item.contenttweaker.graphite_cruicible.name=Graphite Cruicible
 item.contenttweaker.unpreperated_cela_boule.name=Unpreperated Ce:/La Boule
 item.contenttweaker.cruicible_mold.name=Cruicible Mold
+metaitem.amococatalyst.name=Amoco Catalyst
+metaitem.cuproquin.name=Cuproquin Dust 
+metaitem.quinoline.name=Quinoline Dust
+metaitem.bc_ecoli.name=BC-Ecoli
+metaitem.bc_rhozobium.name=BC-Rhizobium
+metaitem.bc_nitrosomanos.name=BC-Nitrosomanos
+fluid.quinoline=Quinoline
+fluid.cuproquin=Cuproquin
+fluid.impure_kapton_k_solution=Impure Kapton-K Solution
+fluid.polyhydroxyalkanoate=Polyhydroxylalkanoate
+fluid.nitroaniline=Nitroaniline
+fluid.hydrogentetrafluoride=Hydrogen Tetrafluoride
+fluid.nutrient_agar=Nutrient Agar
+metaitem.pyromelliticdianhydride.name=Pyromellitic Dianhydride
+fluid.biphenyltetracarboxylicaciddianhydride=Biphenyltetracarboxylic Acidic Anihydride
+tile.mud.name=Mud Block
+metaitem.vr_retrovirus.name=Vr Retrovirus
+metaitem.pr_diatom.name=PR Diatom
+metaitem.pr_chlorophyte.name=PR Chlorophyte
+metaitem.pr_euglena.name=PR Euglena
+devtech.machine.microscope.hv.name=Advanced Microscope II
+devtech.machine.microscope.ev.name=Advanced Microscope III
+devtech.machine.microscope.iv.name=Elite Microscope
+devtech.machine.roaster.lv.name=Basic Roaster
+devtech.machine.roaster.mv.name=Advanced Roaster
+devtech.machine.roaster.hv.name=Advanced Roaster II
