--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1332,3 +1332,5 @@ devtech.machine.microscope.iv.name=Elite Microscope
 devtech.machine.roaster.lv.name=Basic Roaster
 devtech.machine.roaster.mv.name=Advanced Roaster
 devtech.machine.roaster.hv.name=Advanced Roaster II
+metaitem.cucrmgba_catalyst.name=CuCrMgBa Catalyst
+fluid.AFA6C2
