--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1338,3 +1338,11 @@ fluid.y-butyrolactone=γ-Butyrolactone
 item.contenttweaker.pad_petri.name=PAD Petri Dish
 fluid.phenylethyl_alcohol_blood_agar=Phenylethyl Alcohol Blood Agar
 fluid.palm_oil=Palm Oil
+metaitem.ceramics.name=Ceramic Dust
+metaitem.crushed_soybean.name=Crushed Soybean
+metaitem.defatted_soybean_flour.name=Defatted Soybean Flour
+metaitem.biphenyltetracarboxylicaciddianhydride.name=Biphenyl Tetracarboxylicacid Dianhydride
+metaitem.bc_rhizobium.name=BC Rhizobium
+fluid.noctane=N-Octane
+fluid.nheptane=N-Heptane
+fluid.nhexadecane=N-Hexadecane
