--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1346,3 +1346,9 @@ metaitem.bc_rhizobium.name=BC Rhizobium
 fluid.noctane=N-Octane
 fluid.nheptane=N-Heptane
 fluid.nhexadecane=N-Hexadecane
+fluid.b_phenylethyl_alcohol=β-Phenylethyl alcohol
+fluid.sterile_defibrinated_sheep_blood=Sterile defibrinated sheep blood
+item.contenttweaker.soy_bean.name=Soy Bean
+fluid.neutralized_matter_plasma=Neutralized Matter Plasma
+item.contenttweaker.treated_photocoated_hassium_wafer.name=Treated Photocoated Hassium Wafer
+fluid.novolacs_photoresist=Novolacs Photoresist
