--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1352,3 +1352,5 @@ item.contenttweaker.soy_bean.name=Soy Bean
 fluid.neutralized_matter_plasma=Neutralized Matter Plasma
 item.contenttweaker.treated_photocoated_hassium_wafer.name=Treated Photocoated Hassium Wafer
 fluid.novolacs_photoresist=Novolacs Photoresist
+tile.contenttweaker.gravity_separator_rotor_block.name=Gravity Seperator Rotor Block
+multiblocktweaker.gravity_separator
