--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1353,4 +1353,35 @@ fluid.neutralized_matter_plasma=Neutralized Matter Plasma
 item.contenttweaker.treated_photocoated_hassium_wafer.name=Treated Photocoated Hassium Wafer
 fluid.novolacs_photoresist=Novolacs Photoresist
 tile.contenttweaker.gravity_separator_rotor_block.name=Gravity Seperator Rotor Block
-multiblocktweaker.gravity_separator
+recipemap.roasters.name=Roasting
+item.contenttweaker.syringe.name=Syringe
+item.contenttweaker.sheep_blood_syringe.name=Sheep Blood Syringe
+item.contenttweaker.sterilized_syringe.name=Sterilized Syringe
+fluid.sheep_blood=Sheep Blood
+fluid.sheep_blood_cells=Sheep Blood Cells
+fluid.sheep_blood_plasma=Sheep Blood Plasma
+fluid.phosphoric_anyhidride=Phosphoric Anihydride
+fluid.edetic_acid=Edetic Acid
+fluid.unpreperated_light_naquadah_fuel=Unpreperatd Light Naquadah Fuel
+fluid.unpreperated_medium_naquadah_fuel=Unpreperatd Medium Naquadah Fuel
+fluid.unpreperated_light_enriched_naquadah_fuel=Unpreperatd Light Enriched Naquadah Fuel
+fluid.unpreperated_heavy_naquadah_fuel=Unpreperatd Heavy Naquadah Fuel
+fluid.unpreperated_medium_enriched_naquadah_fuel=Unpreperatd Medium Enriched Naquadah Fuel
+fluid.unpreperated_heavy_enriched_naquadah_fuel=Unpreperatd Heavy Enriched Naquadah Fuel
+recipemap.naquadah_fuel_refinery=Naquadah Fuel Refining
+devtech.machine.beam_shrinking_device.name=Beam Shrinking Device
+devtech.machine.roaster.ev.name=Advanced Roaster III
+devtech.machine.roaster.iv.name=Elite Roaster
+devtech.machine.roaster.luv.name=Elite Roaster II
+devtech.machine.roaster.zpm.name=Elite Roaster III
+devtech.machine.roaster.uv.name=Ultimate Roaster
+multiblocktweaker.machine.gravity_separator.name=Gravity Separator
+metaitem.neodymium_alloy.name=Neodymium Alloy Dust
+fluid.phenylethyl_alcohol_blood_agar=Phenylethyl Alcohol Blood Agar
+fluid.defibrinated_sheep_blood=Defiberinated Sheep Blood
+metaitem.solidified_sterile_defibrinated_sheep_blood.name=Solidified Sterile Defiberinated Sheep Blood
+metaitem.phenylethyl_alcohol_blood_agar.name=Phenylethyl Alcohol Blood Agar
+fluid.dissolved_phenylethyl_alcohol_agar=Dissolved Phenylethyl Alcohol Agar
+fluid.phenylethyl_alcohol_agar_solution=Phenylethyl Alcohol Agar Solution
+fluid.methylene_diphosphonic_acid=Methylene Diphosphonic Acid
+fluid.orthophosphoric_acid_solution=Orthophosphoric Acid Solution
