--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1377,7 +1377,7 @@ devtech.machine.roaster.zpm.name=Elite Roaster III
 devtech.machine.roaster.uv.name=Ultimate Roaster
 multiblocktweaker.machine.gravity_separator.name=Gravity Separator
 metaitem.neodymium_alloy.name=Neodymium Alloy Dust
-fluid.phenylethyl_alcohol_blood_agar=Phenylethyl Alcohol Blood Agar
+fluid.phenylethyl_alcohol_agar=Phenylethyl Alcohol Agar
 fluid.defibrinated_sheep_blood=Defiberinated Sheep Blood
 metaitem.solidified_sterile_defibrinated_sheep_blood.name=Solidified Sterile Defiberinated Sheep Blood
 metaitem.phenylethyl_alcohol_blood_agar.name=Phenylethyl Alcohol Blood Agar
@@ -1385,3 +1385,7 @@ fluid.dissolved_phenylethyl_alcohol_agar=Dissolved Phenylethyl Alcohol Agar
 fluid.phenylethyl_alcohol_agar_solution=Phenylethyl Alcohol Agar Solution
 fluid.methylene_diphosphonic_acid=Methylene Diphosphonic Acid
 fluid.orthophosphoric_acid_solution=Orthophosphoric Acid Solution
+fluid.soy_bean_oil=Soy Bean Oil
+fluid.hot_water=Hot Water
+metaitem.grist_powder.name=Grist Powder
+fluid.hot_grist_solution=Hot Grist Solution
