--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1389,3 +1389,12 @@ fluid.soy_bean_oil=Soy Bean Oil
 fluid.hot_water=Hot Water
 metaitem.grist_powder.name=Grist Powder
 fluid.hot_grist_solution=Hot Grist Solution
+metaitem.papic_digest_of_soybean_meal.name=Papic Digest of Soybean Meal
+item.contenttweaker.barley.name=Barley
+fluid.yeast_mixture=Yeast Mixture
+devtech.machine.rotary_evaporator.hv.name=Advanced Rotary Evaporator II
+devtech.machine.rotary_evaporator.ev.name=Advanced Rotary Evaporator III
+devtech.machine.rotary_evaporator.iv.name=Elite Rotary Evaporator 
+multiblocktweaker.machine.electrolytic_cell.name=Electrolytic Cell
+recipemap.electrolytic_cell.name=Electrolysis
+multiblocktweaker.multiblock.electrolytic_cell.description=An advanced version of the Electrolyzer
